--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 * {
+    /*reset do css*/
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Titillium Web', sans-serif;
+}
+
+header{
+    background-image: url(./imagens/img.png.png);
+    background-size: cover;
+    
 }
