--- a/style.css
+++ b/style.css
@@ -6,8 +6,14 @@
     font-family: 'Titillium Web', sans-serif;
 }
 
-header{
+header {
     background-image: url(./imagens/img.png.png);
     background-size: cover;
+    height: 8.375rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
+
