--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     font-family: 'Titillium Web', sans-serif;
 }
 
+:root{
+    --gray-800:#1E293B;
+    --gray-600:#475569;
+}
+
+
 header {
     background-image: url(./imagens/img.png.png);
     background-size: cover;
@@ -15,5 +21,16 @@ header {
     justify-content: center;
     align-items: center;
     
+    margin-bottom: 3.7rem;
+
 }
 
+main{
+    padding-inline: 1.5rem;
+}
+
+.descrição h1{
+    color:var(--gray-800);
+    margin-bottom: 1rem;
+    font-size: 1.5625rem;
+}
