--- a/style.css
+++ b/style.css
@@ -124,10 +124,20 @@ main{
     font-size: 1rem;
 }
 
+
+.bg-desktop {
+    display: none;
+}
+
 @media(min-width: 1000px) {
+    body{
+       display: flex; 
+    }
+    
     header {
         background: none;
         justify-content: flex-start;
+        padding-inline: 7rem;
     }
 
     header img {
@@ -137,4 +147,15 @@ main{
     main {
         padding-inline: 7rem;
     }
+
+.conteudo {
+    width: 100%;
+}
+
+
+.bg-desktop {
+    display: block;
+    width: 100%;
+}
+
 }
