--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --gray-600:#475569;
     --gray-400:#94a3b8;
     --gray-200:#e2e8f0;
+    --light-purple:#9f67ff;
     --purple:#7c3aed;
     --white:#fff;
 }
@@ -115,9 +116,19 @@ main{
 
 }
 
+
+.login button:hover {
+    background: var(--light-purple);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+
+
 .login > p {
     color: var(--gray-600);
 }
+
 
 .login > p a {
     font-weight: 700;
@@ -140,6 +151,7 @@ main{
         margin: 2.5rem 7rem 7rem;
 
         height: fit-content;
+        
     }
 
     header img {
@@ -154,6 +166,9 @@ main{
 
 .conteudo {
     width: 100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -161,5 +176,14 @@ main{
     display: block;
     width: 100%;
 }
+
+.descrição h1 {
+    font-size: 2.25rem;
+}
+
+.descrição p {
+    font-size: 1rem;
+}
+
 
 }
