--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ main{
 @media(min-width: 1000px) {
     body{
        display: flex; 
+       height: 100vh;
     }
     
     header {
@@ -176,6 +177,16 @@ main{
     display: block;
     width: 100%;
 }
+
+
+
+.bg-desktop img {
+    display: block;
+    width: 100%;
+    height: 100%;
+
+}
+
 
 .descrição h1 {
     font-size: 2.25rem;
